checkers/cwe/tests/suite/MemoryAndResourceLeakChecker/static_local_variable_fp_hcat_1868_3.cpp

struct A {
};

A* GetInstance()
{
    return new A();
}

void foo()
{
    GetInstance();  // error
}
